comments + debugging